@@ -1,9 +1,0 @@
-using ArC.CardGames.Predefined.Vanguard;
-
-public partial class AIInputProvider : IVanguardPlayerInputProvider
-{
-    private bool ShouldActivateSkill(VanguardSkillCost skillCost)
-    {
-        return false;
-    }
-}
