@@ -16,7 +16,8 @@ v.0002 Skills and Trigger selection
 - Created CardInfo HUD for card info
 - AI can be loaded on exported APK
 - Removed Screen related Gui input handling to reduce headaches and utilize Godot's emulate mouse from touch
-- Prepared QueryActivateSkillStrategy
+- Created QueryActivateSkillStrategy
+- Removed ManualAI implementation
 
 v.0001 Duel Creatures
 - Created Placeholder card
